--- a/src/caa-cases/components/caa-filter-assigned/caa-filter-assigned.component.html
+++ b/src/caa-cases/components/caa-filter-assigned/caa-filter-assigned.component.html
@@ -62,7 +62,7 @@
               </fieldset>
             </div>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <button type="submit" class="govuk-button govuk-button--secondary govuk-!-margin-right-3">
+            <button class="govuk-button govuk-button--secondary govuk-!-margin-right-3" (click)="search()">
               Search
             </button>
           </form>
