EUI-6547: CAA cases filter component refactor
Fix incorrect radio button values.

--- a/src/caa-cases/components/caa-filter/caa-filter.component.html
+++ b/src/caa-cases/components/caa-filter/caa-filter.component.html
@@ -19,7 +19,7 @@
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="caa-filter-all-assignees" name="caa-filter" type="radio"
                       [checked]="selectedFilterType === caaCasesFilterType.AllAssignees"
-                      value="{{caaCasesFilterType.allAssignees}}"
+                      value="{{caaCasesFilterType.AllAssignees}}"
                       formControlName="caa-filter"
                       data-aria-controls="caa-filter-all-assignees"
                       (click)="selectFilterOption(caaCasesFilterType.AllAssignees)">
@@ -30,7 +30,7 @@
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="caa-filter-assignee-name" name="caa-filter" type="radio"
                       [checked]="selectedFilterType === caaCasesFilterType.AssigneeName"
-                      value="{{caaCasesFilterType.assigneeName}}"
+                      value="{{caaCasesFilterType.AssigneeName}}"
                       formControlName="caa-filter"
                       data-aria-controls="caa-filter-assignee-name"
                       (click)="selectFilterOption(caaCasesFilterType.AssigneeName)">
