--- a/src/caa-cases/components/caa-filter/caa-filter.component.html
+++ b/src/caa-cases/components/caa-filter/caa-filter.component.html
@@ -17,63 +17,74 @@
                 </div>
                 <div class="govuk-radios" data-module="govuk-radios">
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="caa-filter-all-assignees" name="caa-filter" type="radio"
+                    <input class="govuk-radios__input" id="caa-filter-all-assignees" [name]="caaFilterFormControl" type="radio"
                       [checked]="selectedFilterType === caaCasesFilterType.AllAssignees"
                       value="{{caaCasesFilterType.AllAssignees}}"
-                      formControlName="caa-filter"
-                      data-aria-controls="caa-filter-all-assignees"
+                      [formControlName]="caaFilterFormControl"
                       (click)="selectFilterOption(caaCasesFilterType.AllAssignees)">
                     <label class="govuk-label govuk-radios__label" for="caa-filter-all-assignees">
                       All assignees
                     </label>
                   </div>
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="caa-filter-assignee-name" name="caa-filter" type="radio"
+                    <input class="govuk-radios__input" id="caa-filter-assignee-name" [name]="caaFilterFormControl" type="radio"
                       [checked]="selectedFilterType === caaCasesFilterType.AssigneeName"
                       value="{{caaCasesFilterType.AssigneeName}}"
-                      formControlName="caa-filter"
-                      data-aria-controls="caa-filter-assignee-name"
+                      [formControlName]="caaFilterFormControl"
+                      data-aria-controls="conditional-assignee-person"
                       (click)="selectFilterOption(caaCasesFilterType.AssigneeName)">
                     <label class="govuk-label govuk-radios__label" for="caa-filter-assignee-name">
                       Assignee name
                     </label>
                   </div>
-                  <div class="govuk-radios__conditional" [ngClass]="{'govuk-radios__conditional--hidden': selectedFilterType !== caaCasesFilterType.AssigneeName}">
+                  <div class="govuk-radios__conditional" [ngClass]="{'govuk-radios__conditional--hidden': selectedFilterType !== caaCasesFilterType.AssigneeName}"
+                    id="conditional-assignee-person">
                     <div class="govuk-form-group">
                       <label class="govuk-label" for="assignee-person">
                         Type the name and select an available match option
                       </label>
-                      <input class="govuk-input" formControlName="assignee-person" id="assignee-person" name="assignee-person" type="text">
+                      <input class="govuk-input" [formControlName]="assigneePersonFormControl" id="assignee-person" [name]="assigneePersonFormControl" type="text">
                     </div>
                   </div>
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="caa-filter-case-reference-number" name="caa-filter" type="radio"
+                    <input class="govuk-radios__input" id="caa-filter-case-reference-number" [name]="caaFilterFormControl" type="radio"
                       [checked]="selectedFilterType === caaCasesFilterType.CaseReferenceNumber"
                       value="{{caaCasesFilterType.CaseReferenceNumber}}"
-                      formControlName="caa-filter"
-                      data-aria-controls="caa-filter-case-reference-number"
+                      [formControlName]="caaFilterFormControl"
+                      data-aria-controls="conditional-case-reference-number"
                       (click)="selectFilterOption(caaCasesFilterType.CaseReferenceNumber)">
                     <label class="govuk-label govuk-radios__label" for="caa-filter-case-reference-number">
                       Case reference number
                     </label>
                   </div>
-                  <div class="govuk-radios__conditional" [ngClass]="{'govuk-radios__conditional--hidden': selectedFilterType !== caaCasesFilterType.CaseReferenceNumber}">
-                    <div class="govuk-form-group">
+                  <div class="govuk-radios__conditional" [ngClass]="{'govuk-radios__conditional--hidden': selectedFilterType !== caaCasesFilterType.CaseReferenceNumber}"
+                    id="conditional-case-reference-number">
+                    <div class="govuk-form-group" [ngClass]="{'govuk-form-group--error': caseReferenceNumberErrorMessage.length > 0}">
                       <label class="govuk-label" for="case-reference-number">
-                        Enter the 16 digit case reference number
+                        Enter the 16-digit case reference number
                       </label>
-                      <input class="govuk-input" formControlName="case-reference-number" id="case-reference-number" name="case-reference-number" type="text">
+                      <p id="case-reference-number-error-message" class="govuk-error-message" *ngIf="caseReferenceNumberErrorMessage.length > 0">
+                        <span class="govuk-visually-hidden">Error:</span>{{caseReferenceNumberErrorMessage}}
+                      </p>
+                      <input class="govuk-input" [ngClass]="{'govuk-input--error': caseReferenceNumberErrorMessage.length > 0}"
+                        [formControlName]="caseRefFormControl" id="case-reference-number" [name]="caseRefFormControl" type="text"
+                        aria-describedby="case-reference-number-error-message">
                     </div>
                   </div>
                 </div>
               </fieldset>
               <ng-container *ngIf="caaCasesPageType === caaCasesPageTypeLookup.UnassignedCases">
                 <h2 class="govuk-heading-m">{{caaFilterHeading}}</h2>
-                <div class="govuk-form-group">
+                <div class="govuk-form-group" [ngClass]="{'govuk-form-group--error': caseReferenceNumberErrorMessage.length > 0}">
                   <label class="govuk-label" for="case-reference-number">
-                    Enter the 16 digit case reference number
+                    Enter the 16-digit case reference number
                   </label>
-                  <input class="govuk-input" formControlName="case-reference-number" id="case-reference-number" name="case-reference-number" type="text">
+                  <p id="case-reference-number-error-message" class="govuk-error-message" *ngIf="caseReferenceNumberErrorMessage.length > 0">
+                    <span class="govuk-visually-hidden">Error:</span>{{caseReferenceNumberErrorMessage}}
+                  </p>
+                  <input class="govuk-input" [ngClass]="{'govuk-input--error': caseReferenceNumberErrorMessage.length > 0}"
+                    [formControlName]="caseRefFormControl" id="case-reference-number" [name]="caseRefFormControl" type="text"
+                    aria-describedby="case-reference-number-error-message">
                 </div>
               </ng-container>
             </div>
