--- a/src/caa-cases/containers/caa-cases/caa-cases.component.html
+++ b/src/caa-cases/containers/caa-cases/caa-cases.component.html
@@ -2,21 +2,37 @@
   <span class="govuk-caption-xl">{{ (selectedOrganisation$ | async)?.name }}</span>
   <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
   <div>
+
     <button type="submit" class="govuk-button govuk-button--secondary" (click)="toggleFilterSection()">
       {{ caaShowHideFilterButtonText }}
     </button>
     <div *ngIf="caaShowHideFilterButtonText === caaShowHideFilterButtonTextLookup.AssignedCasesHide || caaShowHideFilterButtonText === caaShowHideFilterButtonTextLookup.UnassignedCasesHide">
+      <ng-container *ngIf="isAnyError()">
+        <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+          <h2 class="govuk-error-summary__title" id="error-summary-title">
+            There is a problem
+          </h2>
+          <div class="govuk-error-summary__body">
+            <ul class="govuk-list govuk-error-summary__list">
+              <li *ngFor="let errorMessage of errorMessages">
+                <a href="{{caaCasesPageType}}#{{errorMessage.fieldId}}">{{errorMessage.description}}</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </ng-container>
       <app-caa-filter
         [caaCasesPageType]="caaCasesPageType"
         [selectedFilterType]="selectedFilterType"
         (emitSelectedFilterType)="onSelectedFilterTypeChanged($event)"
-        (emitSelectedFilterValue)="onSelectedFilterValueChanged($event)">
+        (emitSelectedFilterValue)="onSelectedFilterValueChanged($event)"
+        (emitErrorMessages)="onErrorMessages($event)">
       </app-caa-filter>
     </div>
     <details *ngIf="caaCasesPageType === caaCasesPageTypeLookup.UnassignedCases"
       class="govuk-details" data-module="govuk-details" id="add-user-help" close>
       <summary class="govuk-details__summary">
-        <span class="govuk-details__summary-text" id="content-why-can-not-find-case"> Can't find a case?
+        <span class="govuk-details__summary-text" id="content-why-can-not-find-case">Can't find a case?
         </span>
       </summary>
       <div class="govuk-details__text" id="content-reason-can-not-find-case">
@@ -28,9 +44,9 @@
       </div>
     </details>
     <p *ngIf="caaCasesPageType === caaCasesPageTypeLookup.UnassignedCases">
-      You can share a case from your unassigned case list with yourself or a colleague. Your colleague
+      You can share a case from your unassigned case list with yourself or a colleague.
       <br>
-      must be registered with your organisation and have access to Manage cases.
+      Your colleague must be registered with your organisation and have access to Manage Cases.
     </p>
     <div *ngIf="hasResults()" class="pagination-top"
       attr.aria-label="{{ getTotalResults() }} results have been found" role="status">
