--- a/src/caa-cases/components/caa-filter/caa-filter.component.html
+++ b/src/caa-cases/components/caa-filter/caa-filter.component.html
@@ -43,16 +43,15 @@
                       <label class="govuk-label" for="assignee-person">
                         Type the name and select an available match option
                       </label>
-                      <input class="govuk-input" [formControlName]="assigneePersonFormControlName" id="assignee-person"
+                      <input class="govuk-input" [formControlName]="assigneePersonFormControl" id="assignee-person"
                         [name]="assigneePersonFormControl" type="text" [matAutocomplete]="auto">
                       <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionSelected)="onSelectionChange($event.option.value)">
-                        <mat-optgroup *ngFor="let filteredAndGroupedUser of filteredAndGroupedUsers | keyvalue" [label]="filteredAndGroupedUser.key">
+                        <mat-optgroup class="mat-optgroup-label" *ngFor="let filteredAndGroupedUser of filteredAndGroupedUsers | keyvalue" [label]="filteredAndGroupedUser.key">
                           <mat-option *ngFor="let user of filteredAndGroupedUser.value"
-                                      [value]="user"
-                                      [ngClass]="{'hide-autocomplete': !showAutocomplete, 'select-option': showUpdatedColor}">
-                            {{ getDisplayName(user) }}
+                                      [value]="user">
+                            {{ user.fullName + ' - ' + user.email }}
                           </mat-option>
-                          <mat-option [ngClass]="{'select-option': showUpdatedColor}" *ngIf="isNoResultsShown && !filteredUsers.length && showAutocomplete">No results found</mat-option>
+                          <mat-option *ngIf="!filteredAndGroupedUser.value.length && showAutocomplete">No matched user(s) found</mat-option>
                         </mat-optgroup>
                       </mat-autocomplete>
                     </div>
