EUI-5021 CAA All assignee filter

--- a/src/caa-cases/containers/caa-cases/caa-cases.component.scss
+++ b/src/caa-cases/containers/caa-cases/caa-cases.component.scss
@@ -2,6 +2,11 @@
   margin-top: 20px;
 }
 
+.pagination-info {
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
 #btn-share-button {
-  margin-top: 32px;
+  margin-top: 20px;
 }
