--- a/src/caa-cases/containers/caa-cases/caa-cases.component.html
+++ b/src/caa-cases/containers/caa-cases/caa-cases.component.html
@@ -52,7 +52,7 @@
       <mat-tab *ngFor="let navItem of navItems; let last = last;" [label]="navItem.text">
         <div class="pagination-info" *ngIf="hasResults()">
           <div>
-            <p class="govuk-body">Showing <strong>{{ getLastResult() }}</strong> of <strong>{{ getTotalResults() }} {{ currentCaseType }} cases</strong></p>
+            <p class="govuk-body">Showing <strong>{{ getFirstResult() }}</strong> to <strong>{{ getLastResult() }}</strong> of <strong>{{ getTotalResults() }} {{ currentCaseType }} cases</strong></p>
           </div>
           <p class="govuk-body">Select any <strong>{{ currentCaseType }}</strong> cases you want to manage case sharing for.</p>
           <button *ngIf="navItems && navItems.length > 0 && (cases$ | async)?.length > 0"
