EUI-3966: Share Case web component UI changes
Set several properties for use by the modified Share Case web component in XUI Common Library, according to whether it's being used for the Assigned or Unassigned Cases view.

--- a/src/caa-cases/containers/case-share/case-share.component.html
+++ b/src/caa-cases/containers/case-share/case-share.component.html
@@ -1,14 +1,16 @@
 <exui-page-wrapper
-  [backLink]="'/unassigned-cases'"
-  [fnTitle]="'Share a case'"
-  [title]="'Add recipient'">
+  [backLink]="backLink"
+  [fnTitle]="fnTitle"
+  [title]="title">
   <xuilib-share-case
     [shareCases$] = "shareCases$"
     [users]="orgUsers$ | async"
     [removeUserFromCaseToggleOn]="removeUserFromCaseToggleOn$ | async"
     (unselect)="deselect($event)"
     (synchronizeStore)="synchronizeStore($event)"
-    [confirmLink]="'/unassigned-cases/case-share-confirm'"
+    [confirmLink]="confirmLink"
+    [addUserLabel]="addUserLabel"
+    [showRemoveUsers]="showRemoveUsers"
   >
   </xuilib-share-case>
 
