EUI-6577: Share Case web component UI changes
Support new "Cancel" button on Share Case web component, allowing the user to return to the case selection page.

--- a/src/caa-cases/containers/case-share/case-share.component.html
+++ b/src/caa-cases/containers/case-share/case-share.component.html
@@ -6,6 +6,7 @@
   (unselect)="deselect($event)"
   (synchronizeStore)="synchronizeStore($event)"
   [confirmLink]="confirmLink"
+  [cancelLink]="backLink"
   [addUserLabel]="addUserLabel"
   [showRemoveUsers]="showRemoveUsers"
   [fnTitle]="fnTitle"
