EUI-6813 CAA filter no cases found message

--- a/src/caa-cases/containers/caa-cases/caa-cases.component.html
+++ b/src/caa-cases/containers/caa-cases/caa-cases.component.html
@@ -48,8 +48,8 @@
       <br>
       Your colleague must be registered with your organisation and have access to Manage Cases.
     </p>
-    <mat-tab-group animationDuration="0ms" (selectedTabChange)="tabChanged($event)" *ngIf="navItems && navItems.length > 0">
-      <mat-tab *ngFor="let navItem of navItems; let last = last;" [label]="navItem.text">
+    <mat-tab-group #tabGroup animationDuration="0ms" (selectedTabChange)="tabChanged($event)" *ngIf="navItems && navItems.length > 0">
+      <mat-tab *ngFor="let navItem of navItems; let last = last;" [id]="navItem.id" [label]="navItem.text">
         <div class="govuk-!-margin-top-7 govuk-!-margin-bottom-2" *ngIf="(cases$ | async)?.length > 0">
           <div>
             <p class="govuk-body">Showing <strong>{{ getFirstResult() }}</strong> to <strong>{{ getLastResult() }}</strong> of <strong>{{ getTotalResults() }} {{ currentCaseType }}</strong> cases</p>
