--- a/src/caa-cases/components/caa-filter/caa-filter.component.html
+++ b/src/caa-cases/components/caa-filter/caa-filter.component.html
@@ -105,8 +105,12 @@
               </ng-container>
             </div>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <button class="govuk-button govuk-!-margin-right-3" (click)="search()">
+            <button class="govuk-button govuk-!-margin-right-3" (click)="onSearch()">
               Apply filter
+            </button>
+            <button *ngIf="caaCasesPageType === caaCasesPageTypeLookup.UnassignedCases"
+              class="govuk-button govuk-button--secondary govuk-!-margin-right-3" (click)="onReset()">
+              Reset
             </button>
           </form>
         </div>
