--- a/src/fee-accounts/components/notifications/fee-account-error-notification.component.html
+++ b/src/fee-accounts/components/notifications/fee-account-error-notification.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="errorMessages.length > 0">
-  <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
+  <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" data-module="error-summary">
       <h2 class="govuk-error-summary__title" id="error-summary-title">
         There is a problem
       </h2>
