EUI-6770 Persist filter values

--- a/src/caa-cases/containers/caa-cases/caa-cases.component.html
+++ b/src/caa-cases/containers/caa-cases/caa-cases.component.html
@@ -23,6 +23,7 @@
       <app-caa-filter
         [caaCasesPageType]="caaCasesPageType"
         [selectedFilterType]="selectedFilterType"
+        [sessionStateValue]="sessionStateValue"
         [selectedOrganisationUsers]="selectedOrganisationUsers$ | async"
         (emitSelectedFilterType)="onSelectedFilterTypeChanged($event)"
         (emitSelectedFilterValue)="onSelectedFilterValueChanged($event)"
