--- a/src/caa-cases/containers/caa-cases/caa-cases.component.html
+++ b/src/caa-cases/containers/caa-cases/caa-cases.component.html
@@ -58,7 +58,7 @@
           <button [disabled]="(shareCases$ | async)?.length === 0"
             id="btn-share-button" class="govuk-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-4"
             data-module="govuk-button" type="button" aria-haspopup="true" aria-expanded="false" (click)="shareCaseSubmit()">
-            Manage case sharing
+            {{ caaCasesShareButtonText }}
           </button>
         </div>
         <ccd-case-list
