--- a/src/shared/components/hmcts-error-summary/hmcts-error-summary.component.html
+++ b/src/shared/components/hmcts-error-summary/hmcts-error-summary.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!showWarningMessage" id="errorSummary" class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert"
+<div *ngIf="!showWarningMessage" id="errorSummary" class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1"
                   data-module="error-summary">
     <h2 class="govuk-error-summary__title" id="error-summary-title">
     {{header}}
