EUI-6546 CAA assignee filter text box styling

--- a/src/caa-cases/components/caa-filter/caa-filter.component.scss
+++ b/src/caa-cases/components/caa-filter/caa-filter.component.scss
@@ -10,11 +10,11 @@
   }
 
   #assignee-person {
-    width: 500px;
+    width: 90%;
   }
 
   #case-reference-number {
-    width: 356px;
+    width: 70%;
   }
   
   .hide-autocomplete {
