--- a/src/caa-cases/containers/case-share-complete/case-share-complete.component.html
+++ b/src/caa-cases/containers/case-share-complete/case-share-complete.component.html
@@ -4,15 +4,19 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <div class="govuk-panel govuk-panel--confirmation">
-            <h1 class="govuk-panel__title" aria-label="Your cases have been updated">
-              Your cases have been updated
+            <h1 class="govuk-panel__title" aria-label="Your selected cases have been updated">
+              Your selected cases have been updated
             </h1>
           </div>
           <h3 class="govuk-heading-m">What happens next</h3>
-          <p class="govuk-body">If you've shared one or more cases, your colleagues will now be able to access them from their case list.</p>
-          <p class="govuk-body">
-            <span><a [routerLink]="['/unassigned-cases']">Go back to the case list.</a></span>
-          </p>
+          <p id="what-happens-next-added" class="govuk-body" *ngIf="isFromAssignedCasesRoute">The people you added can now access and update the selected cases from their case list.</p>
+          <p id="what-happens-next-removed" class="govuk-body" *ngIf="isFromAssignedCasesRoute">If you removed someone from a case, they cannot access the case anymore.</p>
+          <p id="what-happens-next-shared" class="govuk-body" *ngIf="!isFromAssignedCasesRoute">If you've shared one or more cases, your colleagues will now be able to access them from their case list.</p>
+          <div class="govuk-inset-text">
+            <p>To continue managing case sharing for other users or case types:</p>
+            <a [routerLink]="['/assigned-cases']">Go to assigned cases list</a><br/>
+            <a [routerLink]="['/unassigned-cases']">Go to unassigned cases list</a>
+          </div>
         </div>
       </div>
     </main>
@@ -21,8 +25,8 @@
 <div *ngIf="completeScreenMode === 'PENDING'">
   <br>
   <h1 class="govuk-heading-xl">Sorry, there is a problem</h1><br/>
-  <p id="add-and-remove-user-error" class="govuk-body" *ngIf="removeUserFromCaseToggleOn$ | async">We couldn’t share or remove access to the following cases:</p>
-  <p id="add-user-error" class="govuk-body" *ngIf="!(removeUserFromCaseToggleOn$ | async)">We couldn’t share access to the following cases:</p>
+  <p id="add-and-remove-user-error" class="govuk-body" *ngIf="removeUserFromCaseToggleOn$ | async">We couldn't share or remove access to the following cases:</p>
+  <p id="add-user-error" class="govuk-body" *ngIf="!(removeUserFromCaseToggleOn$ | async)">We couldn't share access to the following cases:</p>
   <div *ngFor="let acase of newShareCases;">
     <div *ngIf="showUserAccessBlock(acase)">
       <h2 class="govuk-heading-m case-share-confirm__title">{{ acase.caseTitle }}</h2>
@@ -60,8 +64,5 @@
   </div>
   <p id="add-and-remove-user-info" class="govuk-body" *ngIf="removeUserFromCaseToggleOn$ | async">Access to all your other selected cases was shared or removed.</p>
   <p id="add-user-info" class="govuk-body" *ngIf="!(removeUserFromCaseToggleOn$ | async)">Access to all your other selected cases was shared.</p>
-  <p class="govuk-body">Try again or <a href="get-help">get help</a> if you’re still having problems</p>
+  <p class="govuk-body">Try again or <a href="get-help">get help</a> if you're still having problems</p>
 </div>
-
-
-
