--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 
+
 // Path to assets for use with the file-url function
 // in the govuk frontend toolkit"s url-helpers partial
 $path: "";
 $jui-assets-path : "";
 
 $govuk-global-styles: true;
-@import "~govuk-frontend/govuk/all";
-@import "~@hmcts/frontend/all";
 @import "./assets/sass/application";
 @import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
+
+$govuk-compatibility-govukfrontendtoolkit: true;
+@import "../node_modules/govuk-frontend/govuk/all";
+
 
 
 div.govuk-prose-scope, p {
   white-space: pre-wrap;
-}
-
-.js-hidden{
-  display: none;
-  visibility: hidden;
 }
 
 td.govuk-table__cell {
@@ -42,6 +40,9 @@ div.govuk-header__logo, div.hmcts-header__logo {
 .stay-signed-in-button {
   margin-right: 15px;
 }
+
+
+
 
 .mat-tab-label {
   font-family: Roboto, Arial, sans-serif;
@@ -78,108 +79,4 @@ div.govuk-header__logo, div.hmcts-header__logo {
 .mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar{
   background: #005ea5;
   height: 5px;
-}
-
-@mixin core-24pt($line-height: (30 / 24), $line-height-640: (24 / 20), $tabular-numbers: false, $font-weight: 400) {
-  $font-size: 24pt;
-  $font-size-640: 18pt;
-  $font-size-print: 16pt;
-  @include _core-font-generator($font-size, $font-size-640, $font-size-print, $line-height, $line-height-640, $tabular-numbers, $font-weight);
-}
-
-@mixin core-20pt($line-height: (26 / 20), $line-height-640: (20 / 16), $tabular-numbers: false, $font-weight: 400) {
-  $font-size: 20pt;
-  $font-size-640: 16pt;
-  $font-size-print: 12pt;
-  @include _core-font-generator($font-size, $font-size-640, $font-size-print, $line-height, $line-height-640, $tabular-numbers, $font-weight);
-}
-
-@mixin core-18pt($line-height: (23 / 18), $line-height-640: (18 / 16), $tabular-numbers: false, $font-weight: 400) {
-  $font-size: 18pt;
-  $font-size-640: 14pt;
-  $font-size-print: 12pt;
-  @include _core-font-generator($font-size, $font-size-640, $font-size-print, $line-height, $line-height-640, $tabular-numbers, $font-weight);
-}
-
-@mixin core-17pt($line-height: (20 / 17), $line-height-640: (16 / 14), $tabular-numbers: false, $font-weight: 400) {
-  $font-size: 17pt;
-  $font-size-640: 14pt;
-  $font-size-print: 12pt;
-  @include _core-font-generator($font-size, $font-size-640, $font-size-print, $line-height, $line-height-640, $tabular-numbers, $font-weight);
-}
-
-@mixin core-16pt($line-height: (20 / 16), $line-height-640: (16 / 14), $tabular-numbers: false, $font-weight: 400) {
-  $font-size: 16pt;
-  $font-size-640: 14pt;
-  $font-size-print: 12pt;
-  @include _core-font-generator($font-size, $font-size-640, $font-size-print, $line-height, $line-height-640, $tabular-numbers, $font-weight);
-}
-
-@mixin core-15pt($line-height: (20 / 15), $line-height-640: (16 / 14), $tabular-numbers: false, $font-weight: 400) {
-  $font-size: 15pt;
-  $font-size-640: 14pt;
-  $font-size-print: 12pt;
-  @include _core-font-generator($font-size, $font-size-640, $font-size-print, $line-height, $line-height-640, $tabular-numbers, $font-weight);
-}
-
-@mixin core-14pt($line-height: (20 / 14), $line-height-640: (15 / 12), $tabular-numbers: false, $font-weight: 400) {
-  $font-size: 14pt;
-  $font-size-640: 12pt;
-  $font-size-print: 11pt;
-  @include _core-font-generator($font-size, $font-size-640, $font-size-print, $line-height, $line-height-640, $tabular-numbers, $font-weight);
-}
-
-@mixin core-12pt($line-height: (16 / 12), $line-height-640: (14 / 11), $tabular-numbers: false, $font-weight: 400) {
-  $font-size: 12pt;
-  $font-size-640: 11pt;
-  $font-size-print: 10pt;
-  @include _core-font-generator($font-size, $font-size-640, $font-size-print, $line-height, $line-height-640, $tabular-numbers, $font-weight);
-}
-
-@mixin core-10pt($line-height: (14 / 10), $line-height-640: (12 / 9), $tabular-numbers: false, $font-weight: 400) {
-  $font-size: 10pt;
-  $font-size-640: 9pt;
-  $font-size-print: 8pt;
-  @include _core-font-generator($font-size, $font-size-640, $font-size-print, $line-height, $line-height-640, $tabular-numbers, $font-weight);
-}
-
-
-@mixin bold-24pt($line-height: (30 / 24), $line-height-640: (24 / 20), $tabular-numbers: false) {
-  @include core-24pt($line-height, $line-height-640, $tabular-numbers: $tabular-numbers, $font-weight: 700);
-}
-
-@mixin bold-20pt($line-height: (26 / 20), $line-height-640: (20 / 16), $tabular-numbers: false) {
-  @include core-20pt($line-height, $line-height-640, $tabular-numbers: $tabular-numbers, $font-weight: 700);
-}
-
-@mixin bold-18pt($line-height: (23 / 18), $line-height-640: (18 / 16), $tabular-numbers: false) {
-  @include core-18pt($line-height, $line-height-640, $tabular-numbers: $tabular-numbers, $font-weight: 700);
-}
-
-@mixin bold-17pt($line-height: (22 / 17), $line-height-640: (16 / 14), $tabular-numbers: false) {
-  @include core-17pt($line-height, $line-height-640, $tabular-numbers: $tabular-numbers, $font-weight: 700);
-}
-
-@mixin bold-16pt($line-height: (20 / 16), $line-height-640: (16 / 14), $tabular-numbers: false) {
-  @include core-16pt($line-height, $line-height-640, $tabular-numbers: $tabular-numbers, $font-weight: 700);
-}
-
-@mixin bold-14pt($line-height: (20 / 14), $line-height-640: (15 / 12), $tabular-numbers: false) {
-  @include core-14pt($line-height, $line-height-640, $tabular-numbers: $tabular-numbers, $font-weight: 700);
-}
-
-@mixin bold-12pt($line-height: (16 / 12), $line-height-640: (14 / 11), $tabular-numbers: false) {
-  @include core-12pt($line-height, $line-height-640, $tabular-numbers: $tabular-numbers, $font-weight: 700);
-}
-
-@mixin bold-10pt($line-height: (14 / 10), $line-height-640: (12 / 9), $tabular-numbers: false) {
-  @include core-10pt($line-height, $line-height-640, $tabular-numbers: $tabular-numbers, $font-weight: 700);
-}
-
-@mixin vertical-align($position: relative) {
-  position: $position;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
+} 
