EUI-6244 Aria name updated

--- a/src/app/containers/header/header.component.html
+++ b/src/app/containers/header/header.component.html
@@ -9,7 +9,7 @@
     ></app-hmcts-global-header>
     <app-hmcts-primary-navigation
       [userLoggedIn]="showHeaderItems$ | async"
-      [label]=""
+      label="Primary"
       [items]="navItems?.navItems"
       [isBrandedHeader]="isBrandedHeader"
     ></app-hmcts-primary-navigation>
