--- a/src/caa-cases/containers/caa-cases/caa-cases.component.html
+++ b/src/caa-cases/containers/caa-cases/caa-cases.component.html
@@ -60,10 +60,15 @@
               <p class="govuk-body">Showing <strong>{{ getFirstResult() }}</strong> to <strong>{{ getLastResult() }}</strong> of <strong>{{ getTotalResults() }} {{ currentCaseType }}</strong> cases</p>
             </div>
             <p class="govuk-body">Select any <strong>{{ currentCaseType }}</strong> cases you want to manage case sharing for.</p>
-            <button [disabled]="(shareAssignedCases$ | async)?.length === 0 && (shareUnassignedCases$ | async)?.length === 0"
-              id="btn-share-button" class="govuk-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-4"
-              data-module="govuk-button" type="button" aria-haspopup="true" aria-expanded="false" (click)="shareCaseSubmit()">
-              {{ caaCasesShareButtonText }}
+            <button [disabled]="(shareAssignedCases$ | async)?.length === 0"
+              id="btn-share-assigned-case-button" class="govuk-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-4"
+              data-module="govuk-button" type="button" aria-haspopup="true" aria-expanded="false" (click)="shareAssignedCasesSubmit()">
+              Manage case sharing
+            </button>
+            <button [disabled]="(shareUnassignedCases$ | async)?.length === 0"
+              id="btn-share-unassigned-case-button" class="govuk-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-4"
+              data-module="govuk-button" type="button" aria-haspopup="true" aria-expanded="false" (click)="shareUnassignedCaseSubmit()">
+              Share case
             </button>
           </div>
           <ccd-case-list
