--- a/src/caa-cases/containers/caa-cases/caa-cases.component.html
+++ b/src/caa-cases/containers/caa-cases/caa-cases.component.html
@@ -63,7 +63,7 @@
             <button *ngIf="caaCasesPageType === caaCasesPageTypeLookup.AssignedCases"
               [disabled]="(shareAssignedCases$ | async)?.length === 0"
               id="btn-share-assigned-case-button" class="govuk-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-4"
-              data-module="govuk-button" type="button" aria-haspopup="true" aria-expanded="false" (click)="shareAssignedCasesSubmit()">
+              data-module="govuk-button" type="button" aria-haspopup="true" aria-expanded="false" (click)="shareAssignedCaseSubmit()">
               Manage case sharing
             </button>
             <button *ngIf="caaCasesPageType === caaCasesPageTypeLookup.UnassignedCases"
