EXUI-402-change in text

--- a/src/app/components/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/components/terms-and-conditions/terms-and-conditions.component.html
@@ -14,10 +14,10 @@
         <p class="govuk-body">The use of the Service includes the Manage Organisation and Manage Cases applications
           (sometimes known as ‘MyHMCTS’) and Judicial Case Manager (JCM).</p>
         <p class="govuk-body">The term ‘you’ includes yourself and all users of the Service in your organisation. The
-          terms ‘we’ and ‘us’ refer to Her Majesty’s Courts and Tribunals Service.</p>
+          terms ‘we’ and ‘us’ refer to His Majesty’s Courts and Tribunals Service.</p>
         <p class="govuk-body">You also agree that you have a legitimate need to use the Service.</p>
         <h2 class="govuk-heading-l">Who we are</h2>
-        <p class="govuk-body">This Service is managed by Her Majesty’s Courts and Tribunals service.</p>
+        <p class="govuk-body">This Service is managed by His Majesty’s Courts and Tribunals service.</p>
         <p class="govuk-body">You should check these terms and conditions regularly. We may update them at any time
           without notice. If you continue to use this service after the terms and conditions have changed, you are
           deemed to have agreed to the changes.
