EUI-8635 Register other org before you start page

--- a/src/register/components/before-you-start/before-you-start.component.html
+++ b/src/register/components/before-you-start/before-you-start.component.html
@@ -10,7 +10,7 @@
         MyHMCTS is a service for submitting and managing applications. It can be used by organisations and legal professionals.
       </p>
       <p class="govuk-body">
-        If you are not sure if your organisation will be able to use this service, see the <a href="#">MyHMTCS guidance on GOV.UK</a>.
+        If you are not sure if your organisation will be able to use this service, see the <a class="govuk-link" href="https://www.gov.uk/guidance/register-for-myhmcts-online-case-management-for-legal-professionals" target="_blank">MyHMTCS guidance on GOV.UK</a>.
       </p>
       <div class="govuk-body">
         <p>By registering, you will:</p>
@@ -43,8 +43,8 @@
       <div class="govuk-body govuk-!-margin-top-6">
         <form>
           <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="checkbox" name="checkbox" type="checkbox" value="checkbox">
-            <label class="govuk-label govuk-checkboxes__label" for="checkbox">
+            <input class="govuk-checkboxes__input" type="checkbox" id="confirmed-organisation-account" name="confirmedOrganisationAccount" formControlName="confirmedOrganisationAccount">
+            <label class="govuk-label govuk-checkboxes__label" for="confirmed-organisation-account">
               I've checked whether my organisation already has an account
             </label>
           </div>
