EUI-8635 Register other org before you start page

--- a/src/register/components/before-you-start/before-you-start.component.html
+++ b/src/register/components/before-you-start/before-you-start.component.html
@@ -10,7 +10,7 @@
         MyHMCTS is a service for submitting and managing applications. It can be used by organisations and legal professionals.
       </p>
       <p class="govuk-body">
-        If you are not sure if your organisation will be able to use this service, see the <a class="govuk-link" href="https://www.gov.uk/guidance/register-for-myhmcts-online-case-management-for-legal-professionals" target="_blank">MyHMTCS guidance on GOV.UK</a>.
+        If you are not sure if your organisation will be able to use this service, see the <a class="govuk-link" href="https://www.gov.uk/guidance/register-for-myhmcts-online-case-management-for-legal-professionals" target="_blank">MyHMCTS guidance on GOV.UK</a>.
       </p>
       <div class="govuk-body">
         <p>By registering, you will:</p>
