--- a/src/register/components/document-exchange-reference/document-exchange-reference.component.html
+++ b/src/register/components/document-exchange-reference/document-exchange-reference.component.html
@@ -1,15 +1,16 @@
 <main id="content" class="govuk-main-wrapper" role="main" tabindex="-1">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <a class="govuk-back-link" href="javascript:history.back()">Back</a>
+      <span class="govuk-caption-xl">Register an organisation</span>
       <h1 class="govuk-heading-xl">
         What's the DX reference for this office?
       </h1>
       <hr>
-      <br>
       <div class="govuk-body govuk-!-margin-top-6">
         <form>
           <div class="govuk-form-group">
-            <label class="govuk-label" for="dx-number">
+            <label class="govuk-label govuk-!-font-weight-bold" for="dx-number">
               DX number
             </label>
             <div id="dx-number-hint" class="govuk-hint">
@@ -20,7 +21,7 @@
               aria-describedby="dx-number-hint">
           </div>
           <div class="govuk-form-group">
-            <label class="govuk-label" for="dx-exchange">
+            <label class="govuk-label govuk-!-font-weight-bold" for="dx-exchange">
               DX exchange
             </label>
             <div id="dx-exchange-hint" class="govuk-hint">
