EUI-8670 Register other org dx reference input

--- a/src/register/components/document-exchange-reference/document-exchange-reference.component.html
+++ b/src/register/components/document-exchange-reference/document-exchange-reference.component.html
@@ -34,6 +34,7 @@
           <div class="govuk-button-group">
             <button class="govuk-button govuk-button--primary">Continue</button>
           </div>
+          <a class="govuk-link" href="javascript:void(0)">Cancel</a>
         </form>
       </div>
     </div>
